--- a/src/components/sections/Gallery/styles.css
+++ b/src/components/sections/Gallery/styles.css
@@ -1,15 +1,19 @@
 #gallery {
+    --roundness: 80px;
+
     padding: 3rem;
-    height: calc(100vh + 80px);
+    height: calc(100vh + var(--roundness));
     display: flex;
     gap: 2rem;
     flex-direction: column;
     background-color: #000;
 
-    border-radius: 80px 80px 0 0;
+    border-radius: var(--roundness) var(--roundness) 0 0;
 
     @media (width < 768px) {
         padding-inline: 1.5rem;
+
+        --roundness: 60px;
     }
 }
 
